Fixed wrapping to new line of account id and account buttons when scrollbar appears

--- a/html/www/css/app.css
+++ b/html/www/css/app.css
@@ -641,7 +641,7 @@ body > .header .logo .icon {
 }
 /* WESLEY */
 .user-panel > .info {
-	padding-left:  5px;
+	padding-left:  0;
 	padding-right: 0;
 }
 #forging_indicator {
